# itzamc

./: .gitignore  ChangeLog  ItzamDocumentation.html  LicenseClosedSource.txt  Makefile.am  Makefile.in  cleanup  configure  configure.ac  libitzam.pc.in  reconf
ItzamC/: ItzamC.vcxproj  ItzamC.vcxproj.filters  itzam.def  itzam.rc  resource.h
ItzamC/ThreadTest/: ThreadTest.cpp  ThreadTest.vcxproj  ThreadTest.vcxproj.filters
src/: Makefile.am  Makefile.in  itzam.h  itzam_btree.c  itzam_data.c  itzam_util.c
test/: Makefile.am  Makefile.in  itzam_btree_test_insert.c  itzam_btree_test_stress.c  itzam_btree_test_strvar.c  itzam_btree_test_threads.c  itzam_errors.h
