AC_INIT(src/itzam.h)
AC_CONFIG_MACRO_DIR([m4])

GENERIC_LIBRARY_NAME=libitzam

#release versioning
GENERIC_MAJOR_VERSION=6
GENERIC_MINOR_VERSION=0
GENERIC_MICRO_VERSION=4

#shared library versioning
GENERIC_LIBRARY_VERSION=6:1:1

AC_SUBST(GENERIC_LIBRARY_VERSION)

PACKAGE=$GENERIC_LIBRARY_NAME
AC_SUBST(GENERIC_LIBRARY_NAME)

GENERIC_VERSION=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION.$GENERIC_MICRO_VERSION
GENERIC_RELEASE=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION
AC_SUBST(GENERIC_RELEASE)
AC_SUBST(GENERIC_VERSION)

VERSION=$GENERIC_VERSION

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, [no-define dist-bzip2 dist-zip])

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL
AM_SANITY_CHECK

AC_HEADER_STDC
AC_HEADER_STDBOOL

AC_C_CONST
AC_C_INLINE

AC_TYPE_OFF_T
AC_TYPE_SIZE_T

AC_FUNC_MALLOC
AC_FUNC_STAT

AC_CHECK_FUNCS([memset strcasecmp strtol strtoul])
AC_CHECK_LIB([rt], [clock_gettime])

AC_CONFIG_FILES([Makefile
                 libitzam.pc
                 src/Makefile
                 test/Makefile])

AC_OUTPUT
